--- a/src/app/shop/shop-items/shop-items.component.html
+++ b/src/app/shop/shop-items/shop-items.component.html
@@ -1,17 +1,16 @@
-<div class="product-item women">
-    <div class="product product_filter">
-                    <div class="product_image">
-                        <img src="{{products.productPicture}}" alt="">
-                    </div>
-                    <div class="favorite"></div>
-                    <div class="product_bubble product_bubble_left product_bubble_green d-flex flex-column align-items-center"><span>new</span></div>
-                    <div class="product_info">
-                        <h6 class="product_name">
-                            <a href="single.html">{{products.name}}</a></h6>
-                        <div class="product_price">{{products.price}}</div>
-                    </div>
+<div class="   {{products.categoryName}}  ">
+    <div class="product discount product_filter">
+        <div class="product_image">
+            <img src="{{products.productPicture}}"  style="max-height: 245px;"  alt="{{products.name}}">
+        </div>
+        <div class="favorite favorite_left"></div>
+     
+        <div class="product_info">
+            <h6 class="product_name"><a>{{products.name}}</a></h6>
+            <div class="product_price">{{products.price}}</div>
+        </div>
     </div>
-    <div class="red_button add_to_cart_button"><a href="#">加入購物車</a></div>
+    <div class="red_button add_to_cart_button"><a routerLink="/basket" >加入購物車</a></div>
 </div>
 <!-- <ng-content>
 <div class="product-item women">
