--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -20,7 +20,7 @@
 					</div>
 					<ul class="sidebar_categories">
 						<li  *ngFor="let item of category"
-						[class.active]="item.id===categoryIdSelected"
+						[class.active]="item.id===ShopParams.categoryId"
 						[value]="item.id"
 						(click)="oncatagoryselect(item.id)"
 						><a href="#">{{item.name}}</a></li>
@@ -32,7 +32,20 @@
 						<li><a href="#">Shop</a></li> -->
 					</ul>
 				</div>
-
+				<div class="sidebar_section">
+					<div class="sidebar_title">
+						<h5>Search</h5>
+					</div>
+				<div class="input-group ">
+					<input type="text" (keyup.enter)="onsearchinput()" #search class="form-control" placeholder="Product name" aria-label="Recipient's username" aria-describedby="basic-addon2">
+			
+				</div>
+				<div style="text-align: center; padding-top: 1px;" >
+				<button type="button" (click)="onsearch(search.value)" style="height: 30px;"  class="filter_button" data-mdb-ripple-init>
+						<span>	<i class="fa fa-search"></i> 搜索 </span>
+					  </button>
+				</div>
+				</div>
 				<!-- Price Range Filtering -->
 				<div class="sidebar_section">
 					<div class="sidebar_title">
@@ -57,18 +70,11 @@
 						<div class="col">
 
 							<!-- Product Sorting -->
-
 							<div class="product_sorting_container product_sorting_container_top">
+								<select class="product_soring box" (change)="onsortSeleted($event)">
+									<option *ngFor="let item of soreOptions" [value]="item.value">{{item.name}}</option>
+								</select>
 								<ul class="product_sorting">
-									<li>
-										<span class="type_sorting_text">預設排序</span>
-										<i class="fa fa-angle-down"></i>
-										<ul class="sorting_type">
-											<li class="type_sorting_btn" data-isotope-option='{ "sortBy": "original-order" }'><span>預設排序</span></li>
-											<li class="type_sorting_btn" data-isotope-option='{ "sortBy": "price" }'><span>價錢</span></li>
-											<li class="type_sorting_btn" data-isotope-option='{ "sortBy": "name" }'><span>產品名稱</span></li>
-										</ul>
-									</li>
 									<li>
 										<span>顯示</span>
 										<span class="num_sorting_text">6</span>
@@ -92,92 +98,22 @@
 									<div class="page_total"><span>of</span> 3</div>
 									<div id="next_page" class="page_next"><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a></div>
 								</div>
-
+								<span class="showing_results">
+									<!-- 頁面筆數 {{(ShopParams.pageNumber-1)*(ShopParams.pageSize+1)}}-{{(ShopParams.pageNumber)*(ShopParams.pageSize)}}  -->
+									商品數量 {{ShopParams.totalCount}}
+								</span>
 							</div>
-
 							<!-- Product Grid -->
 							<div class="product-grid ">
-
-								<div  *ngFor="let item of products">
-									<app-shop-items [products]="item"></app-shop-items>
-								</div>
-<!-- 								
-  <div class="product-item men">
-	<div class="product discount product_filter">
-					<div class="product_image">
-						<img src="/assets/images/product_1.png" alt="">
-					</div>
-					<div class="favorite favorite_left"></div>
-					<div class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center"><span>-$20</span></div>
-					<div class="product_info">
-						<h6 class="product_name"><a href="single.html">Fujifilm X100T 16 MP Digital Camera (Silver)</a></h6>
-						<div class="product_price">$520.00<span>$590.00</span></div>
-					</div>
-	</div>
-	<div class="red_button add_to_cart_button"><a href="#">add to cart</a></div>
-</div> 
- <div class="product-item women">
-	<div class="product product_filter">
-					<div class="product_image">
-						<img src="/assets/images/product_2.png" alt="">
-					</div>
-					<div class="favorite"></div>
-					<div class="product_bubble product_bubble_left product_bubble_green d-flex flex-column align-items-center"><span>new</span></div>
-					<div class="product_info">
-						<h6 class="product_name"><a href="single.html">Samsung CF591 Series Curved 27-Inch FHD Monitor</a></h6>
-						<div class="product_price">$610.00</div>
-					</div>
-	</div>
-	<div class="red_button add_to_cart_button"><a href="#">add to cart</a></div>
-</div>
- <div class="product-item women">
-	<div class="product product_filter">
-					<div class="product_image">
-						<img src="/assets/images/product_3.png" alt="">
-					</div>
-					<div class="favorite"></div>
-					<div class="product_info">
-						<h6 class="product_name"><a href="single.html">Blue Yeti USB Microphone Blackout Edition</a></h6>
-						<div class="product_price">$120.00</div>
-					</div>
-	</div>
-	<div class="red_button add_to_cart_button"><a href="#">add to cart</a></div>
-</div>   -->
+									<app-shop-items *ngFor="let item of products" [products]="item"></app-shop-items>
 							</div>
-
-							<!-- Product Sorting -->
-
-							<!-- <div class="product_sorting_container product_sorting_container_bottom clearfix">
-								<ul class="product_sorting">
-									<li>
-										<span>Show:</span>
-										<span class="num_sorting_text">04</span>
-										<i class="fa fa-angle-down"></i>
-										<ul class="sorting_num">
-											<li class="num_sorting_btn"><span>01</span></li>
-											<li class="num_sorting_btn"><span>02</span></li>
-											<li class="num_sorting_btn"><span>03</span></li>
-											<li class="num_sorting_btn"><span>04</span></li>
-										</ul>
-									</li>
-								</ul>
-								<span class="showing_results">Showing 1–3 of 12 results</span>
-								<div class="pages d-flex flex-row align-items-center">
-									<div class="page_current">
-										<span>1</span>
-										<ul class="page_selection">
-											<li><a href="#">1</a></li>
-											<li><a href="#">2</a></li>
-											<li><a href="#">3</a></li>
-										</ul>
-									</div>
-									<div class="page_total"><span>of</span> 3</div>
-									<div id="next_page_1" class="page_next"><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a></div>
-								</div>
-
-							</div> -->
-
 						</div>
+					</div>
+					<div class="row"></div>
+					<div class="row" style="padding-top:10%;"></div>
+					<div class="product_sorting_container product_sorting_container_bottom clearfix">
+						<pagination (pageChanged)="onPageChanged($event.page)" [itemsPerPage]="ShopParams.pageSize" [boundaryLinks]="true" [totalItems]="ShopParams.totalCount" previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
+						</pagination>
 					</div>
 				</div>
 			</div>
